--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
   body  {
-font-size: 16px;
-display: flex;
-flex-direction: row;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+    margin: 0;
+    padding: o;
     }
