--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
   body  {
-  font-size: 16px;
-  display: flex;
-  flex-direction: column;
-    margin: 0;
-    padding: o;
+   font-size: 14px;
+    line-height: 1.4;
     }
+
+  h1 {
+    font-size: 2em;
+    text-aling: center;
+  }
+
+  h2 {
+    font-size: none;
+    padding: 0;
+  }
+
+  li {
+    margin-bottom: 10px;
+  }
